--- a/.gitignore
+++ b/.gitignore
@@ -161,4 +161,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-/general/dependency-parsing/stanford-corenlp-4.5.7
+stanford-corenlp-4.5.7/
